<resources>
    <string name="app_name">Individual_11</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question_one">¿Conoces esta imagen?</string>
    <string name="yes_message">¡Si lo conosco!</string>
    <string name="no_message">No.....Buuuu</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="show">Mostrar Fragmento</string>
    <string name="close">Cerrar App</string>
</resources>